SELC-5073 fix: sonar